--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -196,12 +196,13 @@ Main Google Maps Block
     position:relative;
     text-align: left;
     position: relative;
-    margin: 10px;
-    max-height: 160px;
+    max-height: 110px;
+    width: 100%;
+    list-style-type: none;
 }
 
-#locations .list-group {
-    margin-bottom: 0px;
+#locations li {
+    width: 100%;
 }
 
 #locations .list-group-item {
@@ -213,12 +214,11 @@ Main Google Maps Block
     position:relative;
     text-align: left;
     position: relative;
-    margin: 10px;
-    max-height: 160px;
+    max-height: 180px;
 }
 
 #nearbyLocations .list-group-item {
-    padding: 2px 5px;
+    padding: 12px 15px;
 }
 
 #placeType {
@@ -292,7 +292,10 @@ Main Google Maps Block
 }
 
 .listview {
+    width: 100%;
+    position:absolute;
     overflow: auto;
+    top:0;
 }
 
 
@@ -302,14 +305,30 @@ Main Google Maps Block
     overflow: auto;
     min-width: 300px;
     max-width: 35%;
-    height:70%;
-    padding:10px;
+    padding:10px 2px 2px 2px;
     background-color: #acacac;
     position: absolute; top: 65px; left: 10px;
     opacity: 0;
     vertical-align: middle;
     text-align: center;
     z-index:10;
+}
+
+.listViewBlock {
+    padding-top: 10px;
+    display: block;
+    overflow: auto;
+    position: relative;
+    height:175px;
+
+}
+.listViewBlock2 {
+    bottom:0;
+    display: block;
+    overflow: auto;
+    position: relative;
+    height:180px;
+    background-color: #c6c6c6;
 }
 /* Reduce font-size to avoid scrolling*/
 @media only screen and (max-width: 1049px) {
@@ -323,16 +342,13 @@ Main Google Maps Block
     #locations {
         max-height: 120px;
     }
-
-    #nearbyLocations {
-        max-height: 120px;
-    }
 }
 
 /* Reduce font-size to avoid scrolling*/
 @media only screen and (min-width: 1050px) and (max-width: 1300px) {
     label {
         font-size: 11px;
+        padding: 2px;
     }
     .list-group-item {
         font-size: 12px;
@@ -343,6 +359,7 @@ Main Google Maps Block
 @media only screen and (min-width: 1301px)  {
     label {
         font-size: 12px;
+        padding: 2px;
     }
     .list-group-item {
         font-size: 12px;
